# riscv-sim-cpp

./: CMakeLists.txt  LICENSE  Makefile  README.md  riscv-sim
.github/workflows/: verify.yml
docs/: Architecture.md  Instruction_flow.md  Performance_model.md  Usage.md
scripts/: gen_flow.py
src/: cpu.cpp  cpu.h  decoder.cpp  decoder.h  instruction.cpp  instruction.h  loader.cpp  loader.h  main.cpp  memory.cpp  memory.h
tests/: test_program.elf  test_program.s
